# blog_V2_backend

./: docker-compose.yml  pyproject.toml
apis/article/: models.py  serialzers.py  tests.py  urls.py  views.py
apis/operations/: models.py  tests.py  urls.py  views.py
apis/users/: models.py  tests.py  urls.py
apis/utils/: pagination.py  tests.py
main/: __init__.py  dev_settings.py  settings.py  urls.py
